S60003: updated css to prevent tooltip wrapping in IE

--- a/src/apps/roadmapplanningboard/RoadmapPlanningBoardApp.css
+++ b/src/apps/roadmapplanningboard/RoadmapPlanningBoardApp.css
@@ -81,6 +81,9 @@
     position: relative;
     top: 1px;
 }
+.planned-capacity-range-tooltip {
+    white-space: nowrap;
+}
 
 .roadmap-board .progress-bar-container.field-percentDone {
     margin: 0;
